--- a/src/daft-recordbatch/Cargo.toml
+++ b/src/daft-recordbatch/Cargo.toml
@@ -13,6 +13,7 @@ futures = {workspace = true}
 html-escape = {workspace = true}
 indexmap = {workspace = true}
 num-traits = {workspace = true}
+ordered-float = "5.0"
 pyo3 = {workspace = true, optional = true}
 rand = {workspace = true}
 serde = {workspace = true}
