--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,12 +59,12 @@ nav:
   - Functions:
     - Scalar Functions: api/functions.md   # column_ are scalar functions
     - User-Defined Functions: api/udf.md
-    - Window Functions: api/window.md
+    # - Window Functions: api/window.md
   - Sessions: api/sessions.md
   - Catalogs & Tables: api/catalogs_tables.md
   - Schema: api/schema.md
   - Data Types: api/datatypes.md
-  - Aggregations: api/groupby.md
+  - Aggregations: api/aggregations.md
   - Series: api/series.md
   - I/O: api/io.md
   - Pushdowns: api/pushdowns.md
