--- a/src/daft-writers/Cargo.toml
+++ b/src/daft-writers/Cargo.toml
@@ -1,5 +1,6 @@
 [dependencies]
 arrow2 = {workspace = true, features = [
+  "arrow",
   "io_ipc_compression"
 ]}
 common-daft-config = {path = "../common/daft-config", default-features = false}
@@ -10,7 +11,7 @@ daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-io = {path = "../daft-io", default-features = false}
 daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
 daft-micropartition = {path = "../daft-micropartition", default-features = false}
-daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
+daft-recordbatch = {path = "../daft-recordbatch", default-features = false, features = ["arrow"]}
 parquet = {version = "54.2.1"}
 pyo3 = {workspace = true, optional = true}
 uuid = {version = "1.0", features = ["v4"]}
