--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -86,11 +86,11 @@ jobs:
       uses: PyO3/maturin-action@v1
       with:
         target: x86_64
-        manylinux: 2_28
+        manylinux: 2_17
         # only produce sdist for linux x86 to avoid multiple copies
         args: --profile release-lto --out dist --sdist
         before-script-linux: |
-          dnf install -y perl-IPC-Cmd
+          yum install -y perl-IPC-Cmd
           curl -fsSL https://bun.sh/install | bash
           export BUN_INSTALL="$HOME/.bun"
           export PATH="$BUN_INSTALL/bin:$PATH"
@@ -100,7 +100,7 @@ jobs:
       uses: PyO3/maturin-action@v1
       with:
         target: aarch64-unknown-linux-gnu
-        manylinux: 2_28
+        manylinux: 2_17
         args: --profile release-lto --out dist
         before-script-linux: |
           export JEMALLOC_SYS_WITH_LG_PAGE=16
