--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -81,48 +81,20 @@ jobs:
         target: x86_64
         args: --profile release-lto --out dist
 
-    - name: Build wheels - Linux x86 (manylinux_2_28)
+    - name: Build wheels - Linux x86
       if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'x86_64') }}
       uses: PyO3/maturin-action@v1
       with:
         target: x86_64
-        manylinux: 2_28
+        manylinux: 2_24
         # only produce sdist for linux x86 to avoid multiple copies
         args: --profile release-lto --out dist --sdist
         before-script-linux: |
-          dnf install -y perl-IPC-Cmd
           curl -fsSL https://bun.sh/install | bash
           export BUN_INSTALL="$HOME/.bun"
           export PATH="$BUN_INSTALL/bin:$PATH"
 
-    # - name: Build wheels - Linux aarch64 (manylinux_2_28)
-    #   if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'aarch64') }}
-    #   uses: PyO3/maturin-action@v1
-    #   with:
-    #     target: aarch64-unknown-linux-gnu
-    #     manylinux: 2_28
-    #     args: --profile release-lto --out dist
-    #     before-script-linux: |
-    #       export JEMALLOC_SYS_WITH_LG_PAGE=16
-    #       apt install -y unzip
-    #       curl -fsSL https://bun.sh/install | bash
-    #       export BUN_INSTALL="$HOME/.bun"
-    #       export PATH="$BUN_INSTALL/bin:$PATH"
-
-    # - name: Build wheels - Linux x86 (manylinux_2_24)
-    #   if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'x86_64') }}
-    #   uses: PyO3/maturin-action@v1
-    #   with:
-    #     target: x86_64
-    #     manylinux: 2_24
-    #     # only produce sdist for linux x86 to avoid multiple copies
-    #     args: --profile release-lto --out dist --sdist
-    #     before-script-linux: |
-    #       curl -fsSL https://bun.sh/install | bash
-    #       export BUN_INSTALL="$HOME/.bun"
-    #       export PATH="$BUN_INSTALL/bin:$PATH"
-
-    - name: Build wheels - Linux aarch64 (manylinux_2_24)
+    - name: Build wheels - Linux aarch64
       if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'aarch64') }}
       uses: PyO3/maturin-action@v1
       with:
