--- a/src/daft-functions/Cargo.toml
+++ b/src/daft-functions/Cargo.toml
@@ -11,6 +11,7 @@ daft-image = {path = "../daft-image", default-features = false}
 daft-io = {path = "../daft-io", default-features = false}
 flate2 = {version = "1.1", features = ["zlib-rs"], default-features = false}
 futures = {workspace = true}
+num-traits = {workspace = true}
 paste = "1.0.15"
 pyo3 = {workspace = true, optional = true}
 simdutf8 = "0.1.5"
