--- a/src/daft-shuffles/Cargo.toml
+++ b/src/daft-shuffles/Cargo.toml
@@ -15,7 +15,7 @@ daft-writers = {path = "../daft-writers", default-features = false}
 futures = {workspace = true}
 itertools = {workspace = true}
 pyo3 = {workspace = true, optional = true}
-pyo3-async-runtimes = {version = "0.23", features = ["attributes", "tokio-runtime"], optional = true}
+pyo3-async-runtimes = {workspace = true, optional = true}
 tokio = {workspace = true}
 tonic = {workspace = true}
 
