--- a/.github/workflows/benchmark-local-tpch.yml
+++ b/.github/workflows/benchmark-local-tpch.yml
@@ -58,6 +58,7 @@ jobs:
       uses: astral-sh/setup-uv@v5
       with:
         python-version: ${{ env.PYTHON_VERSION }}
+        version: "0.6.17"
     - name: Install Daft and dev dependencies
       run: |
         rm -rf daft
