--- a/src/daft-image/Cargo.toml
+++ b/src/daft-image/Cargo.toml
@@ -2,10 +2,14 @@
 arrow2 = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
+daft-dsl = {path = "../daft-dsl", default-features = false}
+daft-functions = {path = "../daft-functions", default-features = false}
 log = {workspace = true}
 num-traits = "0.2.19"
 pyo3 = {workspace = true, optional = true}
 base64.workspace = true
+serde.workspace = true
+typetag.workspace = true
 
 [dependencies.image]
 default-features = false
