--- a/src/daft-image/Cargo.toml
+++ b/src/daft-image/Cargo.toml
@@ -7,9 +7,9 @@ daft-functions = {path = "../daft-functions", default-features = false}
 log = {workspace = true}
 num-traits = "0.2.19"
 pyo3 = {workspace = true, optional = true}
+serde = {workspace = true}
+typetag = {workspace = true}
 base64.workspace = true
-serde.workspace = true
-typetag.workspace = true
 
 [dependencies.image]
 default-features = false
@@ -17,10 +17,7 @@ features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp", "hdr"]
 version = "0.25.5"
 
 [features]
-python = [
-  "dep:pyo3",
-  "common-error/python"
-]
+python = ["dep:pyo3", "common-error/python"]
 
 [lints]
 workspace = true
