--- a/src/daft-scan/Cargo.toml
+++ b/src/daft-scan/Cargo.toml
@@ -12,6 +12,7 @@ ctor = "0.2.9"
 daft-core = {path = "../daft-core", default-features = false}
 daft-csv = {path = "../daft-csv", default-features = false}
 daft-decoding = {path = "../daft-decoding", default-features = false}
+daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-io = {path = "../daft-io", default-features = false}
 daft-json = {path = "../daft-json", default-features = false}
 daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
@@ -37,6 +38,7 @@ python = [
   "dep:pyo3",
   "common-error/python",
   "daft-core/python",
+  "daft-dsl/python",
   "daft-logical-plan/python",
   "daft-recordbatch/python",
   "daft-schema/python",
