--- a/src/daft-writers/Cargo.toml
+++ b/src/daft-writers/Cargo.toml
@@ -7,6 +7,7 @@ arrow2 = {workspace = true, features = [
 common-daft-config = {path = "../common/daft-config", default-features = false}
 common-error = {path = "../common/error", default-features = false}
 common-file-formats = {path = "../common/file-formats", default-features = false}
+common-runtime = {path = "../common/runtime", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-io = {path = "../daft-io", default-features = false}
@@ -15,6 +16,7 @@ daft-micropartition = {path = "../daft-micropartition", default-features = false
 daft-recordbatch = {path = "../daft-recordbatch", default-features = false, features = ["arrow"]}
 parquet = {version = "54.2.1"}
 pyo3 = {workspace = true, optional = true}
+tokio = {workspace = true}
 uuid = {version = "1.0", features = ["v4"]}
 
 [features]
