--- a/src/daft-logical-plan/Cargo.toml
+++ b/src/daft-logical-plan/Cargo.toml
@@ -28,6 +28,7 @@ uuid = {version = "1", features = ["v4"]}
 
 [dev-dependencies]
 daft-dsl = {path = "../daft-dsl", features = ["test-utils"]}
+daft-functions-utf8 = {path = "../daft-functions-utf8", default-features = false}
 pretty_assertions = {workspace = true}
 rand = "0.8"
 rstest = {workspace = true}
