--- a/src/daft-functions-utf8/Cargo.toml
+++ b/src/daft-functions-utf8/Cargo.toml
@@ -1,13 +1,17 @@
 [dependencies]
+arrow2 = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
+itertools = {workspace = true}
 pyo3 = {workspace = true, optional = true}
+regex = {workspace = true}
 serde = {workspace = true}
 typetag = {workspace = true}
 
 [dev-dependencies]
 arrow2 = {workspace = true}
+
 [features]
 python = [
   "dep:pyo3",
