ci: Bump pyarrow version in CI to 19.0.1 (#4301)
## Changes Made

Arrow 19.0.0 is unable to read parquet files written by newer versions
of arrow with statistics.

The issue arises from an optimization where level histograms in
statistics (e.g. the level histogram used for repetition levels) is
omitted when the max level is 0.

For more details, see https://github.com/apache/arrow/issues/45283

At the same time we can't bump to pyarrow 20.0.0 because this is
incompatible with ray, see
https://github.com/ray-project/ray/issues/52685

This means we should use the minor release of arrow 19, i.e. arrow
19.0.1

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -40,7 +40,10 @@ duckdb==1.1.2
 tqdm
 
 # Pyarrow
-pyarrow==19.0.0
+# Pyarrow 19.0.0 has a forwards compatibility bug so we use pyarrow 19.0.1 instead.
+# Pyarrow 20.0.0 is incompatible with Ray hence we can't use newer versions for now.
+# See: https://github.com/Eventual-Inc/Daft/pull/4301
+pyarrow==19.0.1
 # Ray
 ray[data, client]==2.34.0
 
