--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -93,6 +93,7 @@ markdown-exec
 mkdocs-jupyter
 mkdocs-material
 mkdocs-macros-plugin
+mkdocs-redirects
 mkdocs-simple-hooks
 pymdown-extensions
 mkdocs-material[imaging]
