--- a/src/daft-functions-utf8/Cargo.toml
+++ b/src/daft-functions-utf8/Cargo.toml
@@ -9,6 +9,7 @@ pyo3 = {workspace = true, optional = true}
 regex = {workspace = true}
 serde = {workspace = true}
 typetag = {workspace = true}
+unicode-normalization = "0.1.24"
 
 [dev-dependencies]
 arrow2 = {workspace = true}
