--- a/src/daft-functions-utf8/Cargo.toml
+++ b/src/daft-functions-utf8/Cargo.toml
@@ -1,5 +1,6 @@
 [dependencies]
 arrow2 = {workspace = true}
+chrono = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
