--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -30,7 +30,7 @@ itertools = {workspace = true}
 kanal = "0.1"
 log = {workspace = true}
 num-format = {workspace = true}
-opentelemetry = {version = "0.29"}
+opentelemetry = {workspace = true}
 pin-project = "1"
 pyo3 = {workspace = true, optional = true}
 pyo3-async-runtimes = {workspace = true, optional = true}
