--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,7 +96,7 @@ theme:
   - content.code.copy   # add copy button to code sections
   - content.tabs.link   # If one tab switches Python to SQL, all tabs switch
   - toc.follow
-  - toc.integrate   # adds page subsections to left-hand menu (instead of right-hand menu)
+  # - toc.integrate   # adds page subsections to left-hand menu (instead of right-hand menu)
   - navigation.footer
   - navigation.tracking   # url in address bar is automatically updated with active anchor as highlighted in TOC
   - navigation.tabs   # moves nav bar to top, with secondary left-hand menu
