--- a/src/daft-distributed/Cargo.toml
+++ b/src/daft-distributed/Cargo.toml
@@ -14,6 +14,7 @@ daft-schema = {path = "../daft-schema", default-features = false}
 futures = {workspace = true}
 pyo3 = {workspace = true, optional = true}
 pyo3-async-runtimes = {workspace = true, optional = true}
+rand = {workspace = true}
 tokio = {workspace = true}
 tokio-util = {workspace = true}
 
