--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -31,6 +31,7 @@ kanal = "0.1"
 log = {workspace = true}
 num-format = {workspace = true}
 opentelemetry = {workspace = true}
+parking_lot = {workspace = true}
 pin-project = "1"
 pyo3 = {workspace = true, optional = true}
 pyo3-async-runtimes = {workspace = true, optional = true}
