feat: add support for OTEL metrics and tracing (#4322)
## Changes Made

- Add supports for OTEL metrics and traces via a OLTP GRPC endpoint. 
- Adds an example docker-compose file to setup a local OLTP collector
that sends data to prometheus and jaeger instance

```bash
DAFT_DEV_OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317 python testing.py
```

Current runtime stats metrics look like:
<img width="628" alt="image"
src="https://github.com/user-attachments/assets/0b78fb0d-eee9-4f41-8c73-8a6a7da7051f"
/>

## Related Issues


## Checklist

- [ ] Documented in API Docs (if applicable)
- [ ] Documented in User Guide (if applicable)
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/src/common/tracing/Cargo.toml
+++ b/src/common/tracing/Cargo.toml
@@ -1,6 +1,11 @@
 [dependencies]
+common-runtime = {path = "../runtime", default-features = false}
+opentelemetry = {workspace = true}
+opentelemetry-otlp = {workspace = true}
+opentelemetry_sdk = {workspace = true}
 tracing = {workspace = true}
 tracing-chrome = "0.7.2"
+tracing-opentelemetry = {version = "0.30", features = ["default"]}
 tracing-subscriber = "0.3"
 
 [lints]
