--- a/src/daft-image/Cargo.toml
+++ b/src/daft-image/Cargo.toml
@@ -2,9 +2,11 @@
 arrow2 = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
+daft-dsl = {path = "../daft-dsl", default-features = false}
 log = {workspace = true}
 num-traits = "0.2.19"
-pyo3 = {workspace = true, optional = true}
+serde = {workspace = true}
+typetag = {workspace = true}
 base64.workspace = true
 
 [dependencies.image]
@@ -13,10 +15,7 @@ features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp", "hdr"]
 version = "0.25.5"
 
 [features]
-python = [
-  "dep:pyo3",
-  "common-error/python"
-]
+python = ["common-error/python"]
 
 [lints]
 workspace = true
