--- a/src/daft-local-plan/Cargo.toml
+++ b/src/daft-local-plan/Cargo.toml
@@ -10,6 +10,7 @@ log = {workspace = true}
 pyo3 = {workspace = true, optional = true}
 serde = {workspace = true}
 strum = {version = "0.26", features = ["derive"]}
+tracing = {workspace = true}
 
 [features]
 python = [
