trying to add algolia

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -171,9 +171,13 @@ extra:
 # Additional Style
 extra_css:
 - css/extra.css
+- css/docsearch.css
+- https://cdn.jsdelivr.net/npm/@docsearch/css@3
 
 extra_javascript:
 - js/custom.js
+- js/docsearch.js
+- https://cdn.jsdelivr.net/npm/@docsearch/js@3
 
 # Extensions
 markdown_extensions:
