--- a/src/daft-functions-list/Cargo.toml
+++ b/src/daft-functions-list/Cargo.toml
@@ -4,17 +4,11 @@ common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 indexmap = {workspace = true, features = ["serde"]}
-pyo3 = {workspace = true, optional = true}
 serde = {workspace = true}
 typetag = {workspace = true}
 
 [features]
-python = [
-  "dep:pyo3",
-  "common-error/python",
-  "daft-core/python",
-  "daft-dsl/python"
-]
+python = ["common-error/python", "daft-core/python", "daft-dsl/python"]
 
 [lints]
 workspace = true
