feat: adds user-defined dataframe source apis (#4254)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
   - SQL: sql_overview.md
   - Sessions: sessions.md
   - Catalogs: catalogs.md
+  - I/O: io.md
   - Spark Connect: spark_connect.md
   - Distributed Computing: distributed.md
   - Advanced:
@@ -53,7 +54,6 @@ nav:
     - Coming from Dask: migration/dask_migration.md
 - Python API:
   - Overview: api/index.md
-  - DataFrame Creation: api/dataframe_creation.md
   - DataFrame: api/dataframe.md
   - Expressions: api/expressions.md
   - Functions:
@@ -67,7 +67,6 @@ nav:
   - Aggregations: api/aggregations.md
   - Series: api/series.md
   - I/O: api/io.md
-  - Pushdowns: api/pushdowns.md
   - Configuration: api/config.md
   - Miscellaneous: api/misc.md
 - SQL Reference:
@@ -231,3 +230,6 @@ plugins:
             functions: true
           extra:
             trim_doctest_flags: true
+- redirects:
+    redirect_maps:
+      "api/dataframe_creation.md": "api/io.md"
