Revert "feat: adds user-defined dataframe source apis (#4254)"
This reverts commit fa946cfb298e5d438f17f7f14ae13b9b8d5c29f0.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,6 @@ nav:
   - SQL: sql_overview.md
   - Sessions: sessions.md
   - Catalogs: catalogs.md
-  - I/O: io.md
   - Spark Connect: spark_connect.md
   - Distributed Computing: distributed.md
   - Advanced:
@@ -55,6 +54,7 @@ nav:
   - Release Notes ↗: https://github.com/Eventual-Inc/Daft/releases
 - Python API:
   - Overview: api/index.md
+  - DataFrame Creation: api/dataframe_creation.md
   - DataFrame: api/dataframe.md
   - Expressions: api/expressions.md
   - Functions:
@@ -68,6 +68,7 @@ nav:
   - Aggregations: api/aggregations.md
   - Series: api/series.md
   - I/O: api/io.md
+  - Pushdowns: api/pushdowns.md
   - Configuration: api/config.md
   - Miscellaneous: api/misc.md
 - SQL Reference:
@@ -236,6 +237,3 @@ plugins:
             functions: true
           extra:
             trim_doctest_flags: true
-- redirects:
-    redirect_maps:
-      "api/dataframe_creation.md": "api/io.md"
