docs: removes io docs, adds requirements-doc, removes htmlzip

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,10 +7,7 @@ build:
 
 python:
   install:
-  - requirements: requirements-dev.txt
+  - requirements: requirements-doc.txt
 
 mkdocs:
   configuration: mkdocs.yml
-
-formats:
-- htmlzip
