comment out jupyter, didnt comment out output in io api to test timeout

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -199,9 +199,9 @@ markdown_extensions:
 # Plugins
 plugins:
 - markdown-exec
-- mkdocs-jupyter:
-    execute: false
-    include_source: true
+# - mkdocs-jupyter:
+#     execute: false
+#     include_source: true
 - search:
     separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
 - autorefs:
