--- a/src/daft-distributed/Cargo.toml
+++ b/src/daft-distributed/Cargo.toml
@@ -16,7 +16,8 @@ rand = {workspace = true}
 tokio = {workspace = true}
 tokio-stream = {workspace = true}
 tokio-util = {workspace = true}
-uuid = {version = "1.10.0", features = ["v4"]}
+tracing = {workspace = true}
+uuid.workspace = true
 
 [features]
 python = [
