--- a/src/daft-connect/Cargo.toml
+++ b/src/daft-connect/Cargo.toml
@@ -33,8 +33,8 @@ textwrap = "0.16.1"
 tokio = {version = "1.40.0", features = ["full"]}
 tonic = {workspace = true}
 tracing = {workspace = true}
-uuid = {version = "1.10.0", features = ["v4"]}
 snafu.workspace = true
+uuid.workspace = true
 
 [features]
 python = [
