--- a/src/daft-functions/Cargo.toml
+++ b/src/daft-functions/Cargo.toml
@@ -16,11 +16,11 @@ simdutf8 = "0.1.5"
 tiktoken-rs = {workspace = true}
 tokio = {workspace = true}
 typetag = {workspace = true}
-uuid = "1.10.0"
 xxhash-rust = {workspace = true, features = ["xxh64"]}
 bytes.workspace = true
 serde.workspace = true
 snafu.workspace = true
+uuid.workspace = true
 
 [features]
 python = [
