feat: Add a native local parquet writer (#4260)
## Changes Made

Adds a native parquet writer that writes to the local file system, built
on top of arrow-rs.

Can be disabled by setting `DAFT_NATIVE_PARQUET_WRITER=0`.

## Future TODOs

- Support extension types
- Support timestamp types
- Tune buffer sizes
- Encode row groups in parallel (see
https://github.com/Eventual-Inc/Daft/pull/4300)

---------

Co-authored-by: Colin Ho <chiuhong@usc.edu>

--- a/src/daft-recordbatch/Cargo.toml
+++ b/src/daft-recordbatch/Cargo.toml
@@ -1,9 +1,10 @@
 [dependencies]
-arrow2 = {workspace = true}
+arrow-array = {version = "54.2.1"}
+arrow2 = {workspace = true, features = ["arrow"]}
 comfy-table = {workspace = true}
 common-arrow-ffi = {path = "../common/arrow-ffi", default-features = false}
 common-display = {path = "../common/display", default-features = false}
-common-error = {path = "../common/error", default-features = false}
+common-error = {path = "../common/error", default-features = false, features = ["arrow"]}
 common-py-serde = {path = "../common/py-serde", default-features = false}
 common-runtime = {path = "../common/runtime", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
@@ -19,6 +20,7 @@ serde = {workspace = true}
 serde_json = {workspace = true}
 
 [features]
+arrow = ["arrow2/arrow"]
 python = [
   "dep:pyo3",
   "common-error/python",
