--- a/src/daft-writers/Cargo.toml
+++ b/src/daft-writers/Cargo.toml
@@ -1,19 +1,25 @@
 [dependencies]
+arrow-schema = {version = "54.2.1"}
 arrow2 = {workspace = true, features = [
+  "arrow",
   "io_ipc_compression"
 ]}
 async-trait = {workspace = true}
 common-daft-config = {path = "../common/daft-config", default-features = false}
 common-error = {path = "../common/error", default-features = false}
 common-file-formats = {path = "../common/file-formats", default-features = false}
+common-runtime = {path = "../common/runtime", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-io = {path = "../daft-io", default-features = false}
 daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
 daft-micropartition = {path = "../daft-micropartition", default-features = false}
-daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
+daft-recordbatch = {path = "../daft-recordbatch", default-features = false, features = ["arrow"]}
+parquet = {version = "54.2.1"}
 pyo3 = {workspace = true, optional = true}
 tokio = {workspace = true}
+urlencoding = "2.1.3"
+uuid = {version = "1.0", features = ["v4"]}
 
 [features]
 python = ["dep:pyo3", "common-file-formats/python", "common-error/python", "daft-dsl/python", "daft-io/python", "daft-logical-plan/python", "daft-micropartition/python"]
